# lomiri-camera-app

./: .gitignore  AUTHORS  AdvancedOptions.qml  BarcodeReaderOverlay.qml  BottomEdgeIndicators.qml  CMakeLists.txt  ChangeLog  CircleButton.qml  DeleteDialog.qml  FocusRing.qml  GalleryView.qml  GalleryViewHeader.qml  GalleryViewLoader.qml  IconButton.qml  Information.qml  MediaInfoPopover.qml  MimeTypeMapper.js  NEWS  NoSpaceHint.qml  OptionButton.qml  OptionValueButton.qml  OptionsOverlay.qml  PhotoEditorLoader.qml  PhotoRollHint.qml  PhotogridView.qml  PictureReview.qml  ProcessingFeedback.qml  README.md  ReaderOverlay.qml  ResponsiveGridView.qml  SharePopover.qml  ShootButton.qml  SlideshowView.qml  StopWatch.qml  ThinSliderStyle.qml  UnableShareDialog.qml  VideoReview.qml  ViewFinderExportConfirmation.qml  ViewFinderGeometry.qml  ViewFinderOverlay.qml  (+18 more)
CameraApp/: CMakeLists.txt  adddatestamp.cpp  advancedcamerasettings.cpp  advancedcamerasettings.h  components.cpp  components.h  fileoperations.cpp  fileoperations.h  foldersmodel.cpp  foldersmodel.h  postprocessoperations.cpp  postprocessoperations.h  process.cpp  storagelocations.cpp  storagelocations.h  storagemonitor.cpp  storagemonitor.h
assets/: lomiri_shape@27.sci
debian/: changelog  control  copyright  copyright.in  lomiri-camera-app-autopilot.install  lomiri-camera-app-name-change.sh  lomiri-camera-app.install  lomiri-camera-app.lintian-overrides  lomiri-camera-app.migrations  rules  watch
debian/patches/: 2001_no-autopilot-on-Debian.patch  series
debian/upstream/: metadata
desktop/: CMakeLists.txt
po/: CMakeLists.txt  LINGUAS  POTFILES.in  aa.po  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bem.po  bg.po  bn.po  bn_BD.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  et.po  (+114 more)
qml/Viewfinder/: GridLines.qml  ShootFeedback.qml  TimedShootFeedback.qml
qml/components/: OverlayBlur.qml  OverlayPanel.qml  OverlayTint.qml
tests/autopilot/camera_app/tests/: __init__.py
tests/autopilot/lomiri_camera_app/emulators/: main_window.py  panel.py
tests/autopilot/lomiri_camera_app/lomiri_system_tests/helpers/: backup_restore_fixture.py  file_system.py  sqlite.py
tests/autopilot/lomiri_camera_app/lomiri_system_tests/helpers/camera/: __init__.py  fixture_setup.py
tests/autopilot/lomiri_camera_app/tests/: __init__.py  test_capture.py  test_diskspace.py  test_flash.py  test_focus.py  test_gallery_view.py  test_options.py  test_photo_editor.py  test_zoom.py
tests/unittests/: CMakeLists.txt  qstorageinfo_stub.cpp  storageinfocontrol.cpp  storageinfocontrol.h  tst_BottomEdgeIndicators.qml  tst_PhotogridView.qml  tst_QmlTests.cpp  tst_StopWatch.qml  tst_ViewFinderGeometry.qml  tst_storagemonitor.cpp
